[gd_scene load_steps=9 format=3 uid="uid://0tht8qikkrn4"]

[ext_resource type="Texture2D" uid="uid://lkn5j6loruns" path="res://Sprites/ui/play_again_button/play_again1.png" id="1"]
[ext_resource type="Texture2D" uid="uid://c7xhamcao43ap" path="res://Sprites/ui/back_to_menu_button/back_to_menu2.png" id="2"]
[ext_resource type="Texture2D" uid="uid://u8f0ty1guawo" path="res://Sprites/ui/back_to_menu_button/back_to_menu1.png" id="3"]
[ext_resource type="Texture2D" uid="uid://df2dkv11lcg7e" path="res://Sprites/ui/play_again_button/play_again2.png" id="4"]
[ext_resource type="FontFile" path="res://Fonts/heartbit2x.tres" id="5"]
[ext_resource type="Script" path="res://Scripts/End.gd" id="6"]
[ext_resource type="FontFile" path="res://Fonts/cubic.tres" id="7"]
[ext_resource type="Theme" path="res://Fonts/UI_Fonts.tres" id="8"]

[node name="End" type="Node2D"]
script = ExtResource("6")

[node name="PlayAgain" type="TextureButton" parent="."]
offset_left = 48.0
offset_top = 128.0
offset_right = 144.0
offset_bottom = 168.0
texture_normal = ExtResource("1")
texture_pressed = ExtResource("1")
texture_hover = ExtResource("4")

[node name="BackToMenu" type="TextureButton" parent="."]
offset_left = 176.0
offset_top = 128.0
offset_right = 272.0
offset_bottom = 168.0
texture_normal = ExtResource("3")
texture_pressed = ExtResource("3")
texture_hover = ExtResource("2")

[node name="GradeLabel" type="Label" parent="."]
offset_left = 84.0
offset_top = 12.0
offset_right = 150.0
offset_bottom = 40.0
scale = Vector2(0.360002, 0.360002)
theme = ExtResource("8")
theme_override_colors/font_color = Color(0.964706, 0.839216, 0.741176, 1)
theme_override_fonts/font = ExtResource("7")
text = "評等："

[node name="GradeNumber" type="Label" parent="."]
offset_left = 188.0
offset_top = 8.0
offset_right = 252.0
offset_bottom = 36.0
scale = Vector2(0.586188, 0.586188)
theme_override_colors/font_color = Color(0.964706, 0.839216, 0.741176, 1)
theme_override_fonts/font = ExtResource("7")
text = "S"

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 83.0
offset_top = 26.0
offset_right = 217.0
offset_bottom = 54.0
scale = Vector2(0.36, 0.36)
theme = ExtResource("8")
theme_override_colors/font_color = Color(0.964706, 0.839216, 0.741176, 1)
theme_override_fonts/font = ExtResource("7")
text = "最終成績："

[node name="ScoreNumber" type="Label" parent="."]
offset_left = 160.0
offset_top = 25.0
offset_right = 224.0
offset_bottom = 39.0
theme_override_colors/font_color = Color(0.964706, 0.839216, 0.741176, 1)
theme_override_fonts/font = ExtResource("5")
text = "1"

[node name="ComboLabel" type="Label" parent="."]
offset_left = 83.0
offset_top = 41.0
offset_right = 213.0
offset_bottom = 69.0
scale = Vector2(0.36, 0.36)
theme_override_colors/font_color = Color(0.964706, 0.839216, 0.741176, 1)
theme_override_fonts/font = ExtResource("7")
text = "最高連擊："

[node name="ComboNumber" type="Label" parent="."]
offset_left = 160.0
offset_top = 40.0
offset_right = 224.0
offset_bottom = 54.0
theme_override_colors/font_color = Color(0.964706, 0.839216, 0.741176, 1)
theme_override_fonts/font = ExtResource("5")

[node name="GreatLabel" type="Label" parent="."]
clip_contents = true
offset_left = 84.0
offset_top = 56.0
offset_right = 148.0
offset_bottom = 70.0
scale = Vector2(0.36, 0.36)
theme_override_colors/font_color = Color(0.964706, 0.839216, 0.741176, 1)
theme_override_fonts/font = ExtResource("7")
text = "絕妙："

[node name="GreatNumber" type="Label" parent="."]
offset_left = 160.0
offset_top = 56.0
offset_right = 224.0
offset_bottom = 70.0
theme_override_colors/font_color = Color(0.964706, 0.839216, 0.741176, 1)
theme_override_fonts/font = ExtResource("5")

[node name="GoodLabel" type="Label" parent="."]
offset_left = 84.0
offset_top = 69.0
offset_right = 148.0
offset_bottom = 97.0
scale = Vector2(0.36, 0.36)
theme_override_colors/font_color = Color(0.964706, 0.839216, 0.741176, 1)
theme_override_fonts/font = ExtResource("7")
text = "善："

[node name="GoodNumber" type="Label" parent="."]
offset_left = 160.0
offset_top = 69.0
offset_right = 224.0
offset_bottom = 83.0
theme_override_colors/font_color = Color(0.964706, 0.839216, 0.741176, 1)
theme_override_fonts/font = ExtResource("5")

[node name="MissedLabel" type="Label" parent="."]
offset_left = 84.0
offset_top = 83.0
offset_right = 162.0
offset_bottom = 111.0
scale = Vector2(0.36, 0.36)
theme_override_colors/font_color = Color(0.964706, 0.839216, 0.741176, 1)
theme_override_fonts/font = ExtResource("7")
text = "失之："

[node name="MissedNumber" type="Label" parent="."]
offset_left = 160.0
offset_top = 82.0
offset_right = 224.0
offset_bottom = 96.0
theme_override_colors/font_color = Color(0.964706, 0.839216, 0.741176, 1)
theme_override_fonts/font = ExtResource("5")

[connection signal="pressed" from="PlayAgain" to="." method="_on_PlayAgain_pressed"]
[connection signal="pressed" from="BackToMenu" to="." method="_on_BackToMenu_pressed"]
